# AI-Sentiment-Analysis

./:  - Copy.env  README - Copy.md  about - Copy.html  app - Copy.py  blog.html  pyproject.toml  pyvenv.cfg  requirements.txt  sentiment.html  styles.css  train_bert_model.py
